test/error/duplicate-param-name.dsk
let f = (x: int, x: string) -> void
    return
